<resources>
    <string name="app_name">LOCER</string>
    <string name="quick_deliv">Quick delivery to your doorstep </string>
    <string name="deliv_reliability">Get food delivered directly from LOCER</string>
    <string name="food_varieties">Over a wide range of delicacies</string>
    <string name="lets_start">Let\'s get you started</string>
    <string name="launched_once">Intro Activity launched once</string>
    <string name="permssions_title">We need permissions to soothen your experience</string>
    <string name="permssions_desc">Please provide us the permissions to get the best use case</string>

    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="order_now">Order now!</string>
    <string name="most_popular_in_foods">Most Popular In Foods</string>
    <string name="search">Search</string>
    <string name="cart_fragment_title">Cart Fragment</string>
    <string name="laundry_fragment_title">Laundry Fragment</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="email_id_phone">Email id/Phone</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="agreement_to_terms">I agree by the terms and conditions</string>
    <string name="last_name">Last Name</string>
    <string name="wishlist_fragment_title">Wishlist Fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>
