<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_signUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-44dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/emailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:ems="10"
            android:hint="@string/email_id"
            android:nextFocusDown="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageV" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@id/emailId"
            app:layout_constraintStart_toStartOf="@id/emailId"
            app:layout_constraintTop_toBottomOf="@id/emailId" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@id/last_name"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/fui_idp_button_background_google"
            android:text="@string/sign_up"
            android:textColor="@color/fui_bgEmail"
            app:layout_constraintEnd_toEndOf="@id/phone_number"
            app:layout_constraintStart_toStartOf="@id/tnc"
            app:layout_constraintTop_toBottomOf="@id/tnc" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/fui_bgEmail"
            android:text="@string/login"
            android:textColor="@color/appintro_default_selected_color"
            app:layout_constraintEnd_toEndOf="@id/textView3"
            app:layout_constraintStart_toStartOf="@id/textView3"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/appintro_default_selected_color"
            android:text="@string/sign_up_with_facebook"
            android:textColor="@color/fui_bgEmail"
            app:layout_constraintEnd_toEndOf="@id/login_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <Button
            android:id="@+id/button4"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/appintro_default_selected_color"
            android:text="@string/sign_up_with_google"
            android:textColor="@color/fui_bgEmail"
            app:layout_constraintEnd_toEndOf="@id/button3"
            app:layout_constraintStart_toStartOf="@id/button3"
            app:layout_constraintTop_toBottomOf="@id/button3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="@id/signup_button"
            app:layout_constraintStart_toStartOf="@id/signup_button"
            app:layout_constraintTop_toBottomOf="@id/signup_button" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/first_name" />

        <CheckBox
            android:id="@+id/tnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/i_agree_by_the_terms_and_conditions"
            app:layout_constraintStart_toStartOf="@id/phone_number"
            app:layout_constraintTop_toBottomOf="@id/phone_number" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
